--- a/invoice-client-starter/package.json
+++ b/invoice-client-starter/package.json
@@ -9,9 +9,11 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
