--- a/invoice-client-starter/package.json
+++ b/invoice-client-starter/package.json
@@ -11,6 +11,7 @@
     "react": "^18.2.0",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.3",
